# Kitsune

./: .gitignore  CLAUDE.md  README.md  README.ru.md  TODO.md  changelog.md  meson.build
.github/workflows/: build-macos.yml
build-aux/flatpak/: net.armatik.Kitsune.json
data/: net.armatik.Kitsune.desktop.in  net.armatik.Kitsune.gschema.xml  net.armatik.Kitsune.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES.in  kitsune.pot  ru.po
scripts/: bundle-macos.sh  test-isolated.sh
src/: kitsune.gresource.xml  main.py  meson.build
src/kitsune/: __init__.py  application.py  navbar.py  release_cache.py  tags_store.py  watch_positions.py  window.py
src/kitsune/api/: client.py
src/kitsune/auth/: session.py  token_store.py
src/kitsune/models/: __init__.py  catalog.py  franchise.py  release.py
src/kitsune/player/: gst_player.py  macos_media_keys.py
src/kitsune/storage/: __init__.py  auto_collections.py  pending_queue.py  release_cache.py  search_index.py  sync_manager.py  tags_store.py  watch_positions.py
src/kitsune/ui/: __init__.py  auth_dialog.py  catalog_view.py  color_extractor.py  create_tag_dialog.py  filter_dialog.blp  filter_dialog.py  franchise_releases_view.py  franchises_view.py  genre_releases_view.py  genres_view.py  image_cache.py  items_grid_view.py  player_view.blp  player_view.py  preferences_window.blp  preferences_window.py  profile_view.blp  profile_view.py  release_view.blp  release_view.py  release_view_episodes.py  release_view_related.py  release_view_tags.py  search_dialog.blp  search_dialog.py  search_view.blp  search_view.py  session_expired_banner.blp  session_expired_banner.py  tag_popover.py  tag_releases_view.py  tags_view.py  window.blp
src/kitsune/ui/widgets/: content_grid.blp  content_grid.py  franchise_card.blp  franchise_card.py  genre_card.blp  genre_card.py  release_card.blp  release_card.py  tag_card.blp  tag_card.py
tests/: conftest.py  meson.build  test_auto_collections.py  test_genres_view_widget.py  test_pending_queue.py  test_player_view_widget.py  test_release_cache.py  test_release_card_widget.py  test_release_view_widget.py  test_search_index.py  test_session.py  test_session_expired_banner_widget.py  test_sync_manager.py  test_tags_store.py  test_tags_view_widget.py  test_token_store.py  test_watch_positions.py
tests/fakes/: fake_api_client.py
