install_data(
  join_paths('hicolor', 'scalable', 'apps', 'net.armatik.Kitsune.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'funnel-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'genres-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'franchises-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'magnet-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'cross-large-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'seek-backward-10-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'seek-forward-10-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)
