install_data(
  join_paths('hicolor', 'scalable', 'apps', 'net.armatik.Kitsune.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  join_paths('hicolor', 'symbolic', 'apps', 'net.armatik.Kitsune-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.funnel-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.genres-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.franchises-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.magnet-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.cross-large-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.seek-backward-10-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.seek-forward-10-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.image-missing-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  join_paths('hicolor', 'scalable', 'actions', 'net.armatik.Kitsune.sidebar-collapse-right-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)
